
Changes:
* Optional xBRZScale now used to stretch the: full dungeon, Silhouette, inventory items, NPCs on lists.
* FrameSkip optional functionality for slow machines (or heavy CPU load as in "play while you work" :))
* You can now optionally review after death events/items/msgs using Ivan3D mode.
* Optionally always center on player after exiting LookZoom mode.
* Optionally show full dungeon name.
* Grouped config options in categories.

Fixes:
* Mainly when toggling full screen mode on linux, it will now wait you release the key to apply.

Version 0.52, released 24th March 2018
--------------------------------------

Changes:
* Enhanced scaling/stretching graphics using XBRZScale code!! (only in "zoom in (l)ook mode"...)
* New Mind worms!!
* Sound files from IVAN3D, plus other new sounds!! (utilizes more advanced config file syntax than before)
* UT vault added
* Headless ghosts
* Outlined graphics from IVAN3D
* Option to display the turn number on log messages

Tomb of Xinroch, now with MORE evil:
* Buffed both Xinrochs.
* Buffed Xinroch's grave keeper.
* Slightly better rewards for bosses.
* One more vault for Catacombs.
* Maze on ghost Xinroch's level made more interesting.
* Tweaked dwarven gas chamber.
* Added two hidden vaults to TX.
* Added a small TX shop.
* Plus other slight tweaks to TX.

Shields:
* Shields also give AV.
* AV for shields displayed.
* Shield strength modifiers adjusted.
* Shield materials added.

Fixes:
* New bugs added!

Hotfix 0.52.1:
* Add changelog for the new version.
* Fix OP sirens.

Version 0.51, released 23rd December 2017
-----------------------------------------

Changes:
* Skeleton puppies!!!
* Buffed chilling axes and scythes of terror.
* Buffed regeneration.
* Item graphics from CLIVAN ported.
* Beast claws from alien mod ported, they are rather rare weapons using unarmed combat skill.
* Mangos and sausages added!
* Masks, a new headgear, added. Necromancers wear them.
* Taiahas ported from CLIVAN.